Support for widgets

--- a/Views/Editor/_Editor.cshtml
+++ b/Views/Editor/_Editor.cshtml
@@ -1,1 +1,4 @@
-﻿<code-mirror-editor style="height: calc(100vh - 56px)"></code-mirror-editor>
+﻿<golden-layout-widgets>
+  <code-mirror-editor data-name="editor" data-title="Editor (JavaScript)"></code-mirror-editor>
+  <div data-name="output" data-title="Output"></div>
+</golden-layout-widgets>
