--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -18,8 +18,17 @@
     <link rel="stylesheet" href="https://unpkg.com/@stackoverflow/stacks-icons@6.0.2/dist/icons.css">
     <script defer src="https://unpkg.com/@stackoverflow/stacks/dist/js/stacks.min.js"></script>
 
+    <!-- GoldenLayout styles -->
+    <link type="text/css" rel="stylesheet" href="https://golden-layout.com/files/latest/css/goldenlayout-base.css" />
+    <link type="text/css" rel="stylesheet" href="https://golden-layout.com/files/latest/css/goldenlayout-dark-theme.css" />
+    <link type="text/css" rel="stylesheet" href="~/css/golden-layout-widgets.css" />
+
+    <!-- CodeMirror styles -->
+    <link type="text/css" rel="stylesheet" href="~/css/code-mirror-editor.css" />
+
     <!-- custom web components -->
     <script type="module" src="~/js/code-mirror-editor.js"></script>
+    <script type="module" src="~/js/golden-layout-widgets.js"></script>
   </head>
   <body class="theme-dark">
     <!-- navbar -->
