Run js code (insecurely - must fix this) && git push

--- a/Views/Editor/_Editor.cshtml
+++ b/Views/Editor/_Editor.cshtml
@@ -1,4 +1,47 @@
-﻿<golden-layout-widgets>
-  <code-mirror-editor data-name="editor" data-title="Editor (JavaScript)"></code-mirror-editor>
-  <div data-name="output" data-title="Output"></div>
+﻿@using StackExchange.StacksIcons
+
+<nav>
+  <div class="s-navigation bs-ring ml6 mr6 mt4 mb4">
+    <button type="button" class="s-navigation--item fc-green-300" onclick="onRunClicked()">@Svg.Play</button>
+  </div>
+</nav>
+
+<golden-layout-widgets class="mt2">
+  <code-mirror-editor data-name="editor" data-title="JavaScript"></code-mirror-editor>
+  <div id="output"
+       class="p16"
+       style="width: 100%; height: calc(100% - 100px); top: 50px; background-color: #2D2E2F; color: limegreen; overflow: auto"
+       readonly="readonly"
+       data-name="output"
+       data-title="Output">
+  </div>
 </golden-layout-widgets>
+
+<script>
+  function onRunClicked() {
+    const editor = document.querySelector('code-mirror-editor').editorView;
+    const code = editor.viewState.state.doc.text
+      ? editor.viewState.state.doc.text.join('\n')
+      : document.querySelector('code-mirror-editor').editorView.viewState.state.doc.children.map(x => Array.from(x)).flatMap(x => x).join('\n');
+    const run = new Function(code);
+
+    const consoleLog = console.log
+    const output = document.getElementById('output');
+    output.innerHTML = '';
+    console.log = (...args) => {
+      output.innerHTML += `${args.join(' ')}<br/>`;
+      output.scrollTop = output.scrollHeight;
+    }
+
+    try {
+      run();
+
+      console.log();
+      console.log('Execution complete.');
+    } catch (e) {
+      console.log(e);
+    } finally {
+      console.log = consoleLog;
+    }
+  }
+</script>
