--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -34,10 +34,10 @@
     <!-- navbar -->
     <header class="s-topbar">
       <div class="s-topbar--container">
-        <a hx-get="/" class="s-topbar--logo" hx-target="#container" hx-push-url="true">@Svg.Code</a>
+        <a hx-get="/" class="s-topbar--logo" hx-target="#container" hx-push-url="true">@Svg.Code&nbsp;&nbsp;Tietokone IDE</a>
+        <a hx-get="/editor" class="s-topbar--logo fc-light" hx-target="#container" hx-push-url="true">Editor</a>
         <nav class="s-topbar--navigation">
           <ol class="s-topbar--content">
-            <li><a hx-get="/editor" class="s-topbar--item" hx-target="#container" hx-push-url="true">Editor</a></li>
             <li><a hx-get="/privacy" class="s-topbar--item" hx-target="#container" hx-push-url="true">Privacy</a></li>
           </ol>
         </nav>
