--- a/Views/Home/_Privacy.cshtml
+++ b/Views/Home/_Privacy.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="p64">
+﻿<div class="container">
   <h1>Privacy policy</h1>
 
   <p>No personal data shared with us will be given to any third party, under any circumstances.
