--- a/Views/Home/_Index.cshtml
+++ b/Views/Home/_Index.cshtml
@@ -1,9 +1,9 @@
-<div class="p64">
+<div class="container">
   <h1>Welcome to <strong>Tietokone IDE</strong>!</h1>
 
   <p>I've created this site to test building a modern, interactive website without an SPA framework.</p>
 
   <p>The site is built with <a href="https://dotnet.microsoft.com/en-us/apps/aspnet/mvc">ASP.NET MVC</a>
       and <a href="https://htmx.org/">HTMX</a>. The design system used is
-      <a href="https://stackoverflow.design/product/develop/using-stacks/">Stacks</a>.</p>
+      <a href="https://materializecss.com/">Materialize CSS</a>.</p>
 </div>
