--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -10,10 +10,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link type="text/css" rel="stylesheet" href="~/css/materialize.css" />
 
-    <!-- GoldenLayout -->
-    <link type="text/css" rel="stylesheet" href="https://golden-layout.com/files/latest/css/goldenlayout-base.css" />
-    <link type="text/css" rel="stylesheet" href="https://golden-layout.com/files/latest/css/goldenlayout-dark-theme.css" />
-    <link type="text/css" rel="stylesheet" href="~/css/golden-layout-widgets.css" />
+    <!-- Split Grid -->
+    <script src="https://unpkg.com/split-grid/dist/split-grid.js"></script>
 
     <!-- CodeMirror -->
     <link type="text/css" rel="stylesheet" href="~/css/code-mirror-editor.css" />
@@ -45,6 +43,5 @@
 
     <!-- custom web components -->
     <script type="module" src="~/js/code-mirror-editor.js"></script>
-    <script type="module" src="~/js/golden-layout-widgets.js"></script>
   </body>
 </html>
