--- a/Views/Home/_Index.cshtml
+++ b/Views/Home/_Index.cshtml
@@ -5,5 +5,6 @@
 
   <p>The site is built with <a href="https://dotnet.microsoft.com/en-us/apps/aspnet/mvc">ASP.NET MVC</a>
       and <a href="https://htmx.org/">HTMX</a>. The design system used is
-      <a href="https://materializecss.com/">Materialize CSS</a>.</p>
+      <a href="https://materializecss.com/">Materialize CSS</a>. The split layout is implemented using
+      <a href="https://split.js.org/#/split-grid">Split-Grid</a>.</p>
 </div>
