--- a/wwwroot/css/code-mirror-editor.css
+++ b/wwwroot/css/code-mirror-editor.css
@@ -1,8 +1,8 @@
 code-mirror-editor {
   display: block;
-  height: 100%;
+  height: 100% !important;
 }
 
 .cm-editor {
-  padding-top: 8px;
+  height: 100% !important;
 }
