--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -16,10 +16,10 @@
     <!-- CodeMirror -->
     <link type="text/css" rel="stylesheet" href="~/css/code-mirror-editor.css" />
   </head>
-  <body class="theme-dark">
+  <body class="black white-text">
     <!-- navbar -->
     <div class="navbar-fixed">
-      <nav>
+      <nav class="deep-purple darken-3">
         <div class="nav-wrapper">
           <a href="#" hx-get="/" hx-target="#main-content" hx-push-url="true" class="brand-logo pl3">
             <i class="material-icons">code</i>Tietokone IDE
