--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -22,9 +22,9 @@
       <nav class="deep-purple darken-3">
         <div class="nav-wrapper">
           <a href="#" hx-get="/" hx-target="#main-content" hx-push-url="true" class="brand-logo pl3">
-            <i class="material-icons">code</i>Tietokone IDE
+            <i class="material-icons">code</i><span class="hide-mobile">Tietokone IDE</span>
           </a>
-          <ul class="right hide-on-med-and-down">
+          <ul class="right">
             <li><a href="#" hx-get="/editor" hx-target="#main-content" hx-push-url="true">Editor</a></li>
             <li><a href="#" hx-get="/privacy" hx-target="#main-content" hx-push-url="true">Privacy</a></li>
           </ul>
