--- a/wwwroot/css/materialize.css
+++ b/wwwroot/css/materialize.css
@@ -1,14 +1,25 @@
-.pl1, .p1 { padding-left: 5px; }
-.pr1, .p1 { padding-right: 5px; }
-.pt1, .p1 { padding-top: 5px; }
-.pb1, .p1 { padding-bottom: 5px; }
+.pl1, .p1 { padding-left: 5px !important; }
+.pr1, .p1 { padding-right: 5px !important; }
+.pt1, .p1 { padding-top: 5px !important; }
+.pb1, .p1 { padding-bottom: 5px !important; }
 
-.pl2, .p2 { padding-left: 10px; }
-.pr2, .p2 { padding-right: 10px; }
-.pt2, .p2 { padding-top: 10px; }
-.pb2, .p2 { padding-bottom: 10px; }
+.pl2, .p2 { padding-left: 10px !important; }
+.pr2, .p2 { padding-right: 10px !important; }
+.pt2, .p2 { padding-top: 10px !important; }
+.pb2, .p2 { padding-bottom: 10px !important; }
 
 .pl3, .p3 { padding-left: 15px !important; }
-.pr3, .p3 { padding-right: 15px; }
-.pt3, .p3 { padding-top: 15px; }
-.pb3, .p3 { padding-bottom: 15px; }
+.pr3, .p3 { padding-right: 15px !important; }
+.pt3, .p3 { padding-top: 15px !important; }
+.pb3, .p3 { padding-bottom: 15px !important; }
+
+.brand-logo {
+  left: unset !important;
+  transform: unset !important;
+}
+
+@media (max-width: 768px) {
+  .hide-mobile {
+    display: none !important;
+  }
+}
