--- a/wwwroot/css/lib/materialize.css
+++ b/wwwroot/css/lib/materialize.css
@@ -13,6 +13,8 @@
 .pt3, .p3 { padding-top: 15px !important; }
 .pb3, .p3 { padding-bottom: 15px !important; }
 
+.m0 { margin: 0 !important; }
+
 .brand-logo {
   left: unset !important;
   transform: unset !important;
