--- a/Views/Editor/_Editor.cshtml
+++ b/Views/Editor/_Editor.cshtml
@@ -1,53 +1,55 @@
-﻿<style>
-  .grid {
-    display: grid;
-    grid-template-rows: 1fr 5px 1fr;
-    height: calc(100vh - 128px);
-  }
+﻿<link type="text/css" rel="stylesheet" href="~/css/views/editor.css" />
 
-  .gutter-row-1 {
-    grid-column: 1/-1;
-    cursor: row-resize;
-  }
-
-  .gutter-row-2 {
-    grid-row: 2;
-    cursor: row-resize;
-  }
-</style>
-
-<nav class="indigo lighten-1">
+<nav class="toolbar indigo lighten-1">
   <div class="nav-wrapper">
     <ul class="left">
-      <li><a id="run" class="waves-effect btn btn-small deep-purple green-text darken-3 disabled" onclick="onRunClicked()"><i class="material-icons">play_arrow</i></a></li>
+      <li>
+        <a id="run"
+           class="waves-effect btn btn-flat green-text darken-3 disabled"
+           title="Run code..."
+           onclick="onRunClicked()">
+          <i class="material-icons">play_arrow</i>
+        </a>
+      </li>
     </ul>
   </div>
 </nav>
 
-<div class="grid indigo lighten-1">
-  <code-mirror-editor data-name="editor" data-title="JavaScript" onUpdate="onUpdate(value)"></code-mirror-editor>
+<div class="grid deep-purple darken-3">
+  <div>
+    <nav class="deep-purple darken-3" style="height: 32px">
+      <h6 class="pl2 m0" style="line-height: 32px !important; position: relative">JavaScript</h6>
+    </nav>
+    <code-mirror-editor class="blue-grey darken-4" data-name="editor" data-title="JavaScript" onUpdate="onUpdate(value)"></code-mirror-editor>
+  </div>
 
   <div class="gutter-row-1 gutter-row-2"></div>
 
-  <div id="output"
-       class="p3 blue-grey darken-4 white-text"
-       style="width: 100%; height: 100%; overflow: auto"
-       readonly="readonly"
-       data-name="output"
-       data-title="Output">
+  <div class="console">
+    <nav class="deep-purple darken-3" style="height: 27px;">
+      <h6 class="pl2 m0" style="line-height: 22px !important;">Console</h6>
+    </nav>
+    <div id="console-output"
+         class="p3 blue-grey darken-4 white-text"
+         readonly="readonly"
+         data-name="output"
+         data-title="Output">
+    </div>
   </div>
 </div>
 
 <script>
+  // set up split-grid
   window.Split({
-    minSize: 200,
-    snapOffset: 10,
+    minSize: 0,
+    snapOffset: 0,
     rowGutters: [{
       track: 1,
       element: document.querySelector('.gutter-row-1'),
     }]
   })
 
+  // event handlers
   function onUpdate(value) {
     const btn = document.getElementById('run');
     if (value) {
@@ -63,7 +65,7 @@
     const run = new Function(code);
 
     const consoleLog = console.log
-    const output = document.getElementById('output');
+    const output = document.getElementById('console-output');
     output.innerHTML = '';
     console.log = (...args) => {
       output.innerHTML += `${args.join(' ')}<br/>`;
@@ -80,5 +82,4 @@
       console.log = consoleLog;
     }
   }
-
 </script>
