Replace CodeMirror with Ace

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -12,9 +12,6 @@
 
     <!-- Split Grid -->
     <script src="https://unpkg.com/split-grid/dist/split-grid.js"></script>
-
-    <!-- CodeMirror -->
-    <link type="text/css" rel="stylesheet" href="~/css/components/code-mirror-editor.css" />
   </head>
   <body class="black white-text">
     <!-- navbar -->
@@ -51,8 +48,11 @@
     <!-- JS dependencies -->
     <script src="https://unpkg.com/htmx.org@2.0.4"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.37.1/ace.min.js" integrity="sha512-39pMYj4We1YvsGIsTFctdfIdkqFG09F5lVUM4NzwUgE20xuBHdPWI2Ra4AShMX4qMdwTN2vfb9ATOdkoMU512Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.37.1/mode-javascript.min.js" integrity="sha512-S5TwCMItd+YdNiTApqHt2QkA2sd90dgpWxHoYhulWm+Nb/i9GppPsve8IOraaTj56uNJgIOtmFQFggL1PuKkWA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.37.1/theme-monokai.min.js" integrity="sha512-g9yptARGYXbHR9r3kTKIAzF+vvmgEieTxuuUUcHC5tKYFpLR3DR+lsisH2KZJG2Nwaou8jjYVRdbbbBQI3Bo5w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-    <!-- custom web components -->
-    <script type="module" src="~/js/components/code-mirror-editor.js"></script>
+    <!-- custom components -->
+    <script src="~/js/components/code-editor.js"></script>
   </body>
 </html>
