--- a/Views/Editor/_Editor.cshtml
+++ b/Views/Editor/_Editor.cshtml
@@ -7,7 +7,7 @@
         <a id="run"
            class="waves-effect btn btn-flat green-text darken-3 disabled"
            title="Run code..."
-           onclick="onRunClicked()">
+           onclick="onRunButtonClick()">
           <i class="material-icons">play_arrow</i>
         </a>
       </li>
@@ -15,12 +15,13 @@
   </div>
 </nav>
 
-<div class="grid deep-purple darken-3">
+<div class="grid blue-grey darken-4">
   <div>
     <nav class="deep-purple darken-3" style="height: 32px">
-      <h6 class="pl2 m0" style="line-height: 32px !important; position: relative">JavaScript</h6>
+      <h6 class="pl2 m0" style="line-height: 32px !important;">JavaScript</h6>
     </nav>
-    <code-mirror-editor class="blue-grey darken-4" data-name="editor" data-title="JavaScript" onUpdate="onUpdate(value)"></code-mirror-editor>
+
+    <code-editor id="code-editor"></code-editor>
   </div>
 
   <div class="gutter-row-1 gutter-row-2"></div>
@@ -29,6 +30,7 @@
     <nav class="deep-purple darken-3" style="height: 27px;">
       <h6 class="pl2 m0" style="line-height: 22px !important;">Console</h6>
     </nav>
+
     <div id="console-output"
          class="p3 blue-grey darken-4 white-text"
          readonly="readonly"
@@ -39,7 +41,6 @@
 </div>
 
 <script>
-  // set up split-grid
   window.Split({
     minSize: 0,
     snapOffset: 0,
@@ -49,37 +50,10 @@
     }]
   })
 
-  // event handlers
-  function onUpdate(value) {
-    const btn = document.getElementById('run');
-    if (value) {
-      btn.classList.remove('disabled');
-    } else {
-      btn.classList.add('disabled');
-    }
-  }
-
-  function onRunClicked() {
-    const editor = document.querySelector('code-mirror-editor').editorView;
-    const code = editor.viewState.state.doc.toString();
-    const run = new Function(code);
-
-    const consoleLog = console.log
-    const output = document.getElementById('console-output');
+  const editor = document.getElementById('code-editor');
+  const output = document.getElementById('console-output');
+  const onRunButtonClick = () => {
     output.innerHTML = '';
-    console.log = (...args) => {
-      output.innerHTML += `${args.join(' ')}<br/>`;
-      output.scrollTop = output.scrollHeight;
-    }
-
-    try {
-      run();
-      console.log();
-      console.log('Execution complete.');
-    } catch (e) {
-      console.log(e);
-    } finally {
-      console.log = consoleLog;
-    }
-  }
+    editor.run(output);
+  };
 </script>
