--- a/Views/Editor/_Editor.cshtml
+++ b/Views/Editor/_Editor.cshtml
@@ -43,10 +43,11 @@
 </split-grid-wrapper>
 
 <script>
-  const editor = document.getElementById('code-editor');
-  const output = document.getElementById('console-output');
-  const onRunButtonClick = () => {
+  function onRunButtonClick() {
+    const editor = document.getElementById('code-editor');
+    const output = document.getElementById('console-output');
+
     output.innerHTML = '';
     editor.run(output);
-  };
+  }
 </script>
