--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -15,12 +15,12 @@
     <div class="navbar-fixed">
       <nav class="deep-purple darken-3">
         <div class="nav-wrapper">
-          <a href="#" hx-get="/" hx-target="#main-content" hx-push-url="true" class="brand-logo pl3">
+          <a href="/" hx-get="/" hx-target="#main-content" hx-push-url="true" class="brand-logo pl3">
             <i class="material-icons">code</i><span class="hide-mobile">Tietokone IDE</span>
           </a>
           <ul class="right">
-            <li><a href="#" hx-get="/editor" hx-target="#main-content" hx-push-url="true">Editor</a></li>
-            <li><a href="#" hx-get="/privacy" hx-target="#main-content" hx-push-url="true">Privacy</a></li>
+            <li><a href="/editor" hx-get="/editor" hx-target="#main-content" hx-push-url="true">Editor</a></li>
+            <li><a href="/privacy" hx-get="/privacy" hx-target="#main-content" hx-push-url="true">Privacy</a></li>
           </ul>
         </div>
       </nav>
