--- a/Views/Editor/_Editor.cshtml
+++ b/Views/Editor/_Editor.cshtml
@@ -1,4 +1,8 @@
-﻿<link type="text/css" rel="stylesheet" href="~/css/views/editor.css" />
+﻿<style>
+  html {
+    background-color: #263238 !important; /* blue-grey darken-4 */
+  }
+</style>
 
 <nav class="toolbar indigo lighten-1">
   <div class="nav-wrapper">
