Clean up bundling and add gzip compression

--- a/Views/Editor/_Editor.cshtml
+++ b/Views/Editor/_Editor.cshtml
@@ -9,10 +9,10 @@
     <ul class="left">
       <li>
         <a id="run"
-           class="waves-effect btn btn-flat green-text darken-3 disabled"
+           class="btn btn-secondary disabled"
            title="Run code..."
            onclick="onRunButtonClick()">
-          <i class="material-icons">play_arrow</i>
+          <i class="material-symbols-outlined btn-toolbar">play_arrow</i>
         </a>
       </li>
     </ul>
